--- a/Arduchuni.Server/Arduchuni.Server.csproj
+++ b/Arduchuni.Server/Arduchuni.Server.csproj
@@ -34,9 +34,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="0Harmony, Version=1.2.0.1, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\Lib.Harmony.1.2.0.1\lib\net45\0Harmony.dll</HintPath>
-    </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -61,6 +58,8 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="BooleanConverter.cs" />
+    <Compile Include="ChuniIO.cs" />
+    <Compile Include="Config.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="Sensor.cs" />
     <Compile Include="SensorView.xaml.cs">
